--- a/style.css
+++ b/style.css
@@ -1,3 +1,7 @@
+body {
+    text-align: center;
+}
+
 li {
     display: inline;
 }
@@ -14,4 +18,8 @@ img {
     display: block;
     margin-left: auto;
     margin-right: auto;
+}
+
+form {
+    display: inline-block;
 }
