--- a/style.css
+++ b/style.css
@@ -5,6 +5,7 @@ body {
 
 li {
     display: inline;
+    padding: 20px;
 }
 
 .left {
@@ -30,4 +31,5 @@ footer {
     left: 0;
     right: 0;
     bottom: 0;
+    background-color: rgba(243, 241, 241, 0.904);
 }
