--- a/style.css
+++ b/style.css
@@ -3,6 +3,10 @@ body {
     font-family: Arial, Helvetica, sans-serif;
 }
 
+header{
+    padding: 20px;
+}
+
 li {
     display: inline;
     padding-left: 20px;
@@ -34,4 +38,5 @@ footer {
     right: 0;
     bottom: 0;
     background-color: rgba(243, 241, 241, 0.904);
+    padding: 12px;
 }
