--- a/style.css
+++ b/style.css
@@ -1,10 +1,23 @@
 body {
     text-align: center;
-    font-family: Arial, Helvetica, sans-serif;
+    font-family: Arial, Arial, Helvetica, sans-serif;
+    font-size: 13px;
 }
 
 header{
     padding: 20px;
+}
+
+a {
+    color: #5f6368;
+}
+
+a:link {
+    text-decoration: none;
+}
+
+a:hover {
+    text-decoration: underline;
 }
 
 li {
