--- a/style.css
+++ b/style.css
@@ -6,6 +6,7 @@ body {
 
 header{
     padding: 20px;
+    height: 20px;
 }
 
 a {
@@ -25,6 +26,22 @@ li {
     padding-left: 20px;
     padding-right: 0;
 }
+
+#button { 
+    color: rgb(255, 255, 255);
+    background-color: #4285f4;
+    padding-top: 5px;
+    padding-bottom: 13px;
+    margin-top: -5px;
+    margin-bottom: 0px;
+    width: 70px;
+    height: 10px;
+    border-radius: 2px;
+    text-align: center;
+    font-weight: bold;
+    display: inline-block;
+}
+
 
 .left {
     float: left;
